# nanom

./: .clang-tidy  .gitignore  404.html  CMakeLists.txt  DESIGN.md  Doxyfile  LICENSE  NOTICE  README.md  THIRD-PARTY.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  nanom-single.hpp  robots.txt  sitemap.xml
.github/workflows/: bench-rust.yml  bench.yml  ci.yml  fuzz.yml  pages.yml
BENCH_RUST_NOM/: index.html
CHEATSHEET/: index.html
COMPILE_TIME_SAFETY/: index.html
GPU/: index.html
MEMORY_SAFETY/: index.html
NANOTINS_COMPARISON/: index.html
NANO_SHARK/: index.html
NOM_PARITY_AUDIT/: index.html
P2996_COMPAT/: index.html
RUST_SAFETY_REVIEW/: index.html
THREAT_MODEL/: index.html
api/: annotated.html  annotated_dup.js  bulk_8hpp.html  bulk_8hpp.js  bulk_8hpp_source.html  classes.html  classnanom_1_1bulk__table-members.html  classnanom_1_1bulk__table.html  classnanom_1_1bulk__table.js  classnanom_1_1expected-members.html  classnanom_1_1expected.html  classnanom_1_1expected.js  classnanom_1_1soa-members.html  classnanom_1_1soa.html  classnanom_1_1soa.js  classnanom_1_1unexpected-members.html  classnanom_1_1unexpected.html  classnanom_1_1unexpected.js  conceptnanom_1_1BitParser.html  conceptnanom_1_1Described.html  conceptnanom_1_1Parser.html  concepts.html  concepts.js  describe__macro_8hpp.html  describe__macro_8hpp.js  describe__macro_8hpp_source.html  dir_03efe1aa45b50d97332c093e73ed40ef.html  dir_03efe1aa45b50d97332c093e73ed40ef.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  generation_8hpp.html  generation_8hpp_source.html  globals.html  globals_defs.html  index.html  (+89 more)
api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  concepts_0.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+56 more)
bench/: README.md  collect.py  compare_rust.py  parse_bench.cpp  safety_microbench.cpp  safety_overhead.md  segmented_bench.cpp  streaming_pcapng_bench.cpp  streaming_pcapng_parse.hpp
bench/rust_nom/: Cargo.toml
bench/rust_nom/src/: main.rs
bindings/python/: CMakeLists.txt  README.md  bench.py  demo.py  example_pcapng.cpp  nanom_arrow.hpp  pyproject.toml  test_arrow_cpp.cpp
bindings/python/gptp/: CMakeLists.txt  README.md  build_fixture.py  demo.py  example_gptp.cpp  gptp_parse.hpp  gptp_rows.hpp  test_gptp.py
design/: index.html
dev/bench/: data.js
docs/: BENCH_RUST_NOM.md  CHEATSHEET.md  COMPILE_TIME_SAFETY.md  GPU.md  MEMORY_SAFETY.md  NANOTINS_COMPARISON.md  NANO_SHARK.md  NOM_PARITY_AUDIT.md  P2996_COMPAT.md  RUST_SAFETY_REVIEW.md  THREAT_MODEL.md  getting-started.md  index.md
examples/: elf.cpp  ethernet.cpp  fat16.cpp  reflect26.cpp
examples/nano_shark/core/: avro_dump.hpp  avro_ocf.hpp  decode_options.hpp  decode_pass.hpp  defrag.hpp  gptp.hpp  gptp_rows.hpp  json_tree.hpp  l2l3_nodes.hpp  l4_dispatch.hpp  lldp.hpp  lldp_rows.hpp  node_row.hpp  packet_row.hpp  soa_columns.hpp  someip.hpp  someip_rows.hpp
examples/nano_shark/src/: nano_shark_main.cpp
examples/nano_shark/testdata/: dpar_sample_lldp.ndjson  gen_fragments.py  gen_gptp.py  gen_someip.py  gptp_fixture.ndjson  gptp_fixture.pcapng  ipv4_fragments_sample.ndjson  ipv4_fragments_sample.pcap  ipv6_fragments_sample.ndjson  ipv6_fragments_sample.pcap  someip_fixture.ndjson  someip_fixture.pcap
examples/nano_shark/tests/: test_avro.cpp  test_defrag.cpp  test_json_tree.cpp  test_protocols3.cpp  test_soa_columns.cpp
examples/nanotins_parity/: README.md  diff_test.cmake  dpar_lite.cpp  nm_pcap.hpp  nm_protocols.hpp  pcap2columns.cpp  pcap_bulk.cpp  pcapng2json.cpp
examples/nanotins_parity/testdata/: SRL_front_left_51_short.pcapng  dpar_sample.ndjson  dpar_sample.pcap  ipv4_options_sample.ndjson  ipv4_options_sample.pcap  lldp_sample.ndjson  srv6_sample.ndjson  srv6_sample.pcap
fuzz/: README.md  differential_fuzz.cpp  fuzz_defrag.cpp  fuzz_scan_walk.cpp  fuzz_segmented.cpp  fuzz_streaming_pcapng.cpp  self_fuzz.cpp
getting-started/: index.html
include/nanom/: bulk.hpp  describe_macro.hpp  generation.hpp  nanom.hpp  nanom26.hpp  nom.hpp  prelude.hpp  reflect.hpp  schema.hpp  segmented.hpp  soa.hpp
overrides/: main.html
search/: search_index.json
test/consumer/: CMakeLists.txt  main.cpp
tests/: test_memory_safety.cpp  test_memory_safety_gaps.cpp  test_memory_safety_gaps_generation.cpp  test_memory_safety_generation.cpp  test_memory_safety_generation_gaps.cpp  test_memory_safety_ub.cpp  test_nanom.cpp  test_nom_parity.cpp  test_reflect26.cpp  test_segmented.cpp  test_streaming_safety.cpp  test_strict_profile.cpp
tests/strict_neg/: neg_bulk.cpp  neg_raw_ptr.cpp  neg_string_temp.cpp
tools/: amalgamate.py  gen_llms.py  make_godbolt.py
try/: godbolt.cpp
